Fixing vertical-alignment issue with cake logo.  Adding cake logo to pattern primer page.

--- a/_resources/scss/modules/_documentation.scss
+++ b/_resources/scss/modules/_documentation.scss
@@ -12,7 +12,6 @@
 
 	display: none;
 	height: $logoHeight;
-	position: relative;
 	width: $logoWidth;
 
 	@include respond(tabletPortrait) {
@@ -42,6 +41,13 @@
 			z-index: $i;
 		}
 	}
+}
+
+// this inner element fixes the issue with absolutely positioned elements within a table-cell displayed element
+// this happened in Firefox
+.doc-logo-inner {
+	height: 100%;
+	position: relative;
 }
 
 .doc-project-title {
